--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 dj-database-url==0.5.0
 Django==3.2.23
 gunicorn==20.1.0
+pillow==10.2.0
 psycopg2==2.9.9
 pytz==2023.3.post1
 sqlparse==0.4.4
