--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
+cloudinary==1.36.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2.23
 django-allauth==0.57.0
 django-bootstrap-v5==1.0.11
@@ -13,4 +15,5 @@ python3-openid==3.2.0
 pytz==2023.3.post1
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+urllib3==1.26.18
 whitenoise==5.3.0
